--- a/교재3.html
+++ b/교재3.html
@@ -58,6 +58,11 @@
             <td>방 이름</td>
             <td>대상</td>
             <td>크기</td>
+            
+            <td>유채방</td>
+            <td>여성 도미토리</td>
+            
+
 
         </tr>
 
